--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eventemitter2": "^6.4.9",
     "file-type": "~16.5.4",
-    "husky": "^9.1.0",
+    "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
     "node-fetch": "^2.7.0",
     "parse-data-url": "^6.0.0",
@@ -74,6 +74,7 @@
     "prettier": "^3.3.3",
     "release-it": "^17.6.0",
     "shx": "^0.3.4",
+    "terser-webpack-plugin": "^5.3.10",
     "ts-loader": "^9.5.1",
     "ts-morph": "^23.0.0",
     "ts-node": "^10.9.2",
@@ -83,8 +84,7 @@
     "typescript": "^5.5.3",
     "typescript-debounce-decorator": "^0.0.18",
     "webpack": "^5.93.0",
-    "webpack-cli": "^5.1.4",
-    "terser-webpack-plugin": "^5.3.10"
+    "webpack-cli": "^5.1.4"
   },
   "engines": {
     "whatsapp-web": ">=2.2326.10-beta"
